Added more words.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="words"></div>
     
     <div id="footer">
-      <div>Refresh page in order to get another random word. - Copyright &copy; Radu Cojocaru</div>
+      <div>Refresh page in order to get another random word.<br /> <span id="entries_count"></span> words - Copyright &copy; Radu Cojocaru</div>
     </div>
     
     <script src="js/jquery-1.4.3.min.js"></script>
@@ -22,6 +22,7 @@
     <script>
     $(document).ready(function(){
       App.run(romanianEnglishDictionary, 'words');
+      $("#entries_count").text(romanianEnglishDictionary.entries.length);
     });
     </script>
   </body>
