Added help info.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="words"></div>
     
     <div id="footer">
-      <div>Refresh page in order to get another random word.<br /> <span id="entries_count"></span> words - Copyright &copy; Radu Cojocaru</div>
+      <div>([enter] - show translation, [9] / [0] - next word, [?] - don't know)<br /> <span id="entries_count"></span> words - Copyright &copy; Radu Cojocaru</div>
     </div>
     
     <script src="js/jquery-1.4.3.min.js"></script>
